--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -61,7 +61,7 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Jednostavno tekstno polje za brzo dodavanje bilješki, bez oglasa.</string>
+    <string name="app_short_description">A beautiful quick note taking app without ads or weird permissions.</string>
     <string name="app_long_description">
         Trebate li brzo zapamtiti nešto za kupiti, adresu ili startup ideju? Onda je ovo aplikacija koju ste tražili! Nema kompliciranih koraka postavljanja, samo upišite ono za što ste došli. Dolazi s opcijom automatskog spremanja bilješki, tako da nećete odbaciti svoje promjene pogreškom. Podržava stvaranje više nezavisnih bilješki.
 
