--- a/app/src/main/res/values-id/strings.xml
+++ b/app/src/main/res/values-id/strings.xml
@@ -61,7 +61,7 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Aplikasi teks sederhana untuk menambahkan catatan dengan cepat, tanpa iklan.</string>
+    <string name="app_short_description">A beautiful quick note taking app without ads or weird permissions.</string>
     <string name="app_long_description">
         Ingin membuat catatan daftar belanjaan, alamat tempat, atau ide-ide bisnis dengan cepat? Maka ini adalah aplikasi yang paling tepat untuk anda! Tidak perlu menyiapkan hal-hal yang rumit, cukup ketik apa yang anda inginkan. Dengan fitur simpan otomatis, anda tidak perlu khawatir kehilangan catatan karena sesuatu yang tidak diduga. Juga mendukung membuat beberapa catatan independen.
 
