--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -61,7 +61,7 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Un semplice campo di testo per aggiungere velocemente le note, senza pubblicità.</string>
+    <string name="app_short_description">A beautiful quick note taking app without ads or weird permissions.</string>
     <string name="app_long_description">
         C\'è bisogno di prendere una nota rapida riguardo qualcosa da acquistare, un indirizzo o un\'idea per una startup? Allora questa è l\'applicazione che si stava cercando! Basta aprire l\'app a scrivere quello che si vuole, non è necessaria nessuna impostazione preliminare. C\'è il comodo salvataggio automatico, così non si butteranno via le modifiche per errore. Supporta la creazione di più note indipendenti.
 
