--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -61,7 +61,7 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Paprasta programa kurti įrašams, be reklamų.</string>
+    <string name="app_short_description">A beautiful quick note taking app without ads or weird permissions.</string>
     <string name="app_long_description">
         Norite greitai pažymėti mintį, pirkinių sąrąšą, adresą ar verslo pradžios idėją? Ši programa būtent tai, ko ieškote! Nėra sudėtingų nustatymų, rašykite ką norite. Įrašų automatinis išsaugojimas užtikrina, jog neprarasite jų per klaidą. Galimas kelių nesusijusių įrašų kūrimas.
 
