--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -61,7 +61,7 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Prosty notatnik bez reklam.</string>
+    <string name="app_short_description">A beautiful quick note taking app without ads or weird permissions.</string>
     <string name="app_long_description">
         Potrzebujesz szybko zanotować, co masz kupić, gdzie masz pojść lub co zrobić? Zatem jest to aplikacja, której szukasz. Nie ma tu żadnych skomplikowanych kroków ani ustawień, po prostu pisz, co konieczne jest do zapamiętania. Autozapis nie pozwoli na umknięcie niczego. Dla zabieganych jest opcja pisania kilka notatek na raz.
 
