--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -61,7 +61,7 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Просто текстовое поле для заметок, без рекламы</string>
+    <string name="app_short_description">A beautiful quick note taking app without ads or weird permissions.</string>
     <string name="app_long_description">
         Нужно записать, что купить, адрес или идею стартапа? Тогда это то приложение, что вы искали! Не нужно долго настраивать, просто введите то, что хотели. Есть автосохранение, поэтому вы никогда не отмените правки по ошибке. Поддерживается создание нескольких независимых друг от друга заметок.
 
