--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -61,7 +61,7 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Reklamsız, hızlı not eklemek için basit bir metin alanı.</string>
+    <string name="app_short_description">A beautiful quick note taking app without ads or weird permissions.</string>
     <string name="app_long_description">
         Satın almanız gereken bir şey, adres veya aklınıza gelen bir fikir hakkında hızlı bir not almanız mı gerekti? O halde, aradığınız uygulama bu! Karmaşık kurulum adımları gerekmeden hemen notunuzu yazın. Otomatik kaydetme ile birlikte gelir, bu nedenle yanlışlıkla değişiklikleri kaybetmezsiniz. Birden fazla bağımsız not oluşturmayı destekler.
 
