--- a/app/src/main/res/values-az/strings.xml
+++ b/app/src/main/res/values-az/strings.xml
@@ -59,6 +59,10 @@
     <string name="import_notes">Toplu faylları qeyd şəklində daxil et</string>
     <string name="import_folder">Qovluq daxil et</string>
 
+    <!-- FAQ -->
+    <string name="faq_1_title">How can I change the widgets color?</string>
+    <string name="faq_1_text">In case you have only 1 active widget, you can either recreate it, or use the button in the app settings for customizing it. If you have multiple active widgets, the button in the app settings will not be available. As the app supports color customization per-widget, you will have to recreate the widget that you want to customize.</string>
+
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">A beautiful quick note taking app without ads or weird permissions.</string>
