--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -59,6 +59,10 @@
     <string name="import_notes">Importovať viacero súborov ako poznámky</string>
     <string name="import_folder">Importovať priečinok</string>
 
+    <!-- FAQ -->
+    <string name="faq_1_title">Ako viem zmeniť farby widgetu?</string>
+    <string name="faq_1_text">V prípade, že máte iba 1 aktívny widget, ho môžete buď znova vytvoriť, alebo použiť tlačidlo v nastaveniach apky na zmenu farby. Ak máte widgetov viacero, tlačidlo v nastaveniach apky zmizne. Keďže apka podporuje rôzne farby pre každý widget, budete musieť znovu vytvoriť ten widget, ktorého farby chcete zmeniť.</string>
+
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Krásna apka na pridávanie rýchlych poznámok bez reklám a nepotrebných oprávnení.</string>
