--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -65,7 +65,7 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
-    <string name="app_title">Eenvoudige Notities - Maak supersnel handige memo's</string>
+    <string name="app_title">Eenvoudige Notities Pro - Maak snel handige memo's</string>
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Een prachtig notitieblok zonder advertenties en onnodige permissies.</string>
     <string name="app_long_description">
