--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -47,6 +47,7 @@
     <string name="autosave_notes">Gardado automático</string>
     <string name="enable_line_wrap">Habilitar sangrado de liña</string>
     <string name="use_incognito_mode">Use Incognito mode of keyboards</string>
+    <string name="move_undone_checklist_items">Move undone checklist items at the top</string>
 
     <!-- Checklists -->
     <string name="checklist">Checklist</string>
