--- a/app/src/main/res/values-id/strings.xml
+++ b/app/src/main/res/values-id/strings.xml
@@ -47,6 +47,7 @@
     <string name="autosave_notes">Otomatis simpan catatan</string>
     <string name="enable_line_wrap">Aktifkan baris berlibat</string>
     <string name="use_incognito_mode">Gunakan mode papan ketik incognito</string>
+    <string name="move_undone_checklist_items">Move undone checklist items at the top</string>
 
     <!-- Checklists -->
     <string name="checklist">Checklist</string>
