--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -47,6 +47,7 @@
     <string name="autosave_notes">Automatiškai išsaugoti užrašus</string>
     <string name="enable_line_wrap">naudoti eilutės perkėlimą</string>
     <string name="use_incognito_mode">Use Incognito mode of keyboards</string>
+    <string name="move_undone_checklist_items">Move undone checklist items at the top</string>
 
     <!-- Checklists -->
     <string name="checklist">Checklist</string>
